--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,6 +7,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
+    />
+
     <link rel="stylesheet" href="/src/styles.scss" />
   </head>
   <body>
