--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -20,3 +20,28 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
+<!-- npx nx run api:lint
+
+vijay.perumalsamy@aalamsoft.com
+Aalam@123 -->
+<!--
+1. Lint issue clearing
+2. Using CSS Variables in all files
+3. use REM mostly - and px when necessary -->
+
+<!--
+public: Holds static assets and the HTML file that's the entry point for your app.
+src: This is where your source code lives.
+assets: Static files like images, fonts etc.
+components: Shared components that can be used across different parts of the app. For example, Button, Input, Modal etc.
+features: (or modules/pages/screens) Each feature or page of the app can have its own folder here. Each feature folder can have its own components, services, tests etc. For example, Home, About, User etc.
+services: This can include code for API calls, utility functions or other kinds of services.
+hooks: Custom hooks for your React components.
+redux: (or state) Contains everything related to state management: actions, reducers, store, etc.
+styles: Global styles or shared style variables, mixins etc.
+layouts: Contains layout components which hold the common structure between pages like header, footer, and navigation.
+types: Contains all the TypeScript type definitions (if using TypeScript).
+helpers: (or utils) Utility functions.
+tests: (if not colocated with components) Contains test configuration and test cases. -->
